--- a/Pancake stack/style.css
+++ b/Pancake stack/style.css
@@ -19,3 +19,9 @@ body {
   border-radius: 6px;
   box-shadow: 5px 10px #888888:
 }
+
+.task-1.container {
+  display: grid;
+  height: 100vh;
+  grid-template-rows: auto 1fr auto;
+}
