--- a/Pancake stack/style.css
+++ b/Pancake stack/style.css
@@ -25,3 +25,22 @@ body {
   height: 100vh;
   grid-template-rows: auto 1fr auto;
 }
+
+.task-2.container {
+  display: grid;
+  height: 100vh;
+  grid-template-columns repeat(12, 1fr);
+  gap: 15px;
+  align-items: center;
+}
+
+.height-50 {
+  height: 50vh;
+}
+.task-2 .item-1{
+  grid-column: 2 / span 4;
+}
+
+.task-2 .item-2 {
+  grid-column: 6 / span 6;
+}
