Responsive layout desktop

--- a/style.css
+++ b/style.css
@@ -46,7 +46,7 @@ body {
   grid-column: 6 / span 6;
 }
 
-.task-3-1.container {
+.task-3-1.container { /*mobile view*/
   display: grid;
   height: 100vh;
   grid-template-columns repeat(12, 1fr);
@@ -81,5 +81,32 @@ body {
   }
   .task-3-1 footer {
     grid-column: 3 / span 10;
+  }
+}
+
+@media (min-width: 996px) { /*desktop view*/
+  .task-3-1.container{
+    display: grid;
+    height: 100vh;
+    grid-template-columns repeat(12, 1fr);
+    grid-template-rows: auto auto 1fr auto;
+    gap: 20px;
+  }
+
+  .task-3-1 nav {
+    grid-column: 3 / span 8;
+  }
+  .task-3-1 main {
+    grid-column: 3 / span 8;
+  }
+  .task-3-1 aside {
+    grid-row: 2 / 4;
+  }
+  .task-3-1 .ads {
+    grid-column: 11 / span 2;
+    grid-row: 2 / 4;
+  }
+  .task-3-1 footer {
+    grid-column: 1 / span 12;
   }
 }
