--- a/style.css
+++ b/style.css
@@ -102,3 +102,69 @@ body {
     grid-column: 1 / span 12;
   }
 }
+
+/* Grid Template Areas */
+
+.task-3-2 header {
+  grid-area: header;
+}
+
+.task-3-2 nav {
+  grid-area: nav;
+}
+
+.task-3-2 main {
+  grid-area: main;
+}
+
+.task-3-2 aside {
+  grid-area: sidebar;
+}
+
+.task-3-2 .ads {
+  grid-area: ads;
+}
+
+.task-3-2 footer {
+  grid-area: footer;
+}
+
+.task-3-2.container { /*mobile view*/
+  display: grid;
+  height: 100vh;
+  gap: 20px;
+
+  grid-template-rows: auto auto 1fr auto auto auto;
+
+  grid-template-areas: /*assign the template area names on the layout*/
+    "header"
+    "nav"
+    "main"
+    "sidebar"
+    "ads"
+    "footer"
+}
+
+@media (min-width: 768px) {
+  .task-3-2.container { /*tablet view*/
+    grid-template-rows: auto auto 1fr auto;
+  
+    grid-template-areas: /*assign the template area names on the layout*/
+      "header header header"
+      "nav nav nav"
+      "sidebar main main"
+      "ads footer footer"
+  }
+}
+
+@media (min-width: 1200px) {
+  .task-3-2.container { /*desktop view*/
+    grid-template-rows: auto auto 1fr auto;
+  
+    grid-template-areas: /*assign the template area names on the layout*/
+      "header header header header"
+      "sidebar nav nav ads"
+      "sidebar main main ads"
+      "footer footer footer footer"
+  }
+}
